--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ raphendyr-django-essentials==1.3.0
 celery==3.1.23
 pyrabbit==1.1.0
 requests==2.10.0
-lxml==3.6.0
+lxml ~= 4.3.2
 PyYAML==3.11
 docutils==0.12
 python-magic==0.4.11
