Remove code/files related to the Linux chroot sandbox.
- The Linux chroot sandbox is no longer in use. Therefore, files
  and folders related to this implementation are removed.
- The documentation included in the README.md files that is related
  to the sandbox is also removed.

**Side note:** It is not 100% guaranty that all code related to the
  sandbox has been removed.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,13 @@ scripts/chroot_execvp
 .DS_Store
 *~
 venv
+
+#### Development Environment ####
+ 
+# symbolic link exercises to /srv/courses 
+# Important!! This symbolic link should be created in order to debug the mooc grader
+exercises
+
+# automatic generated keys
+grader/ajax_key.py
+grader/secret_key.py
