--- a/doc/etc-uwsgi-grader.ini
+++ b/doc/etc-uwsgi-grader.ini
@@ -3,7 +3,7 @@ chdir=/srv/grader/mooc-grader
 home=/srv/grader/venv
 module=grader.wsgi:application
 daemonize=/var/log/uwsgi/%n.log
-socket=127.0.0.1:3031
+socket=/run/grader/uwsgi.socket
 uid=grader
 gid=grader
 master=True
