Move uwsgi settings to ini under homedir

--- a/doc/etc-uwsgi-grader.ini
+++ b/doc/etc-uwsgi-grader.ini
@@ -1,11 +1,15 @@
 [uwsgi]
+single-interpreter=true
 chdir=/srv/grader/mooc-grader
 home=/srv/grader/venv
 module=grader.wsgi:application
-daemonize=/var/log/uwsgi/%n.log
 socket=/run/grader/uwsgi.socket
+master-fifo=/run/grader/uwsgi.master
+stats=/run/grader/uwsgi.stats
 uid=grader
 gid=grader
 master=True
 processes=3
 env=LANG=en_US.UTF-8
+chmod=666
+touch-chain-reload=/srv/grader/grader-uwsgi.ini
