--- a/doc/etc-systemd-system-uwsgi.service
+++ b/doc/etc-systemd-system-uwsgi.service
@@ -2,11 +2,12 @@
 Description=uWSGI Emperor service
 
 [Service]
-ExecStart=/srv/grader/venv/bin/uwsgi --emperor /etc/uwsgi
+ExecStart=/srv/grader/venv/bin/uwsgi --ini /srv/grader/grader-uwsgi.ini
 Restart=always
 KillSignal=SIGQUIT
 Type=notify
 NotifyAccess=all
+ExecReload=/bin/sh -c "echo c > /run/grader/uwsgi.master"
 
 [Install]
 WantedBy=multi-user.target
