--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django~=2.2.19
-raphendyr-django-essentials==1.3.0
+Django~=3.2.12
+git+https://github.com/apluslms/django-essentials.git@1.4.0#egg=django-essentials==1.4.0
 requests~=2.25.1
 PyYAML~=5.4.1
 docutils~=0.17.1
