--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -8,11 +8,10 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update -y
 RUN apt install -y python3 python3-pip git gettext curl firefox
-RUN pip3 install --upgrade pip setuptools wheel
 
 # install python requirements
 COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+RUN pip install --break-system-packages -r requirements.txt
 RUN rm requirements.txt
 
 # install geckodriver for selenium
